<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical"
              android:scrollbars="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="50sp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/barcode"/>
        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">
            <EditText
                android:layout_weight="9"
                android:id="@+id/edit_text_barcode1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/barcode_1"
                android:textColor="@android:color/black"
                android:textStyle="italic"/>
            <ImageButton
                android:id="@+id/button_camera1"
                android:layout_weight="1"
                android:src="@drawable/ic_photo_camera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_height="50dp">
            <EditText
                android:layout_weight="9"
                android:id="@+id/edit_text_barcode2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/barcode_2"
                android:textColor="@android:color/black"
                android:textStyle="italic"/>
            <ImageButton
                android:id="@+id/button_camera2"
                android:layout_weight="1"
                android:src="@drawable/ic_photo_camera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/check_marginbottom_cardview"
            android:layout_marginTop="@dimen/check_margintop_card"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/check_radius_cardview"
            app:cardPreventCornerOverlap="false">

            <FrameLayout
                android:id="@+id/frame_button_check_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/framelayout"
                android:background="@drawable/button_check">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/check_barcode"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"/>
            </FrameLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/check_radius_cardview">

            <FrameLayout
                android:id="@+id/frame_button_listcheck"
                android:layout_width="match_parent"
                android:layout_height="@dimen/framelayout"
                android:background="@drawable/button_list"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/list_time_check"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"/>
            </FrameLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>


